<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- ↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓ ↓↓↓↓↓↓↓↓↓↓↓ ↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓ -->
    <!-- ↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓ COMMON PART ↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓ -->
    <!-- ↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓ ↓↓↓↓↓↓↓↓↓↓↓ ↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓ -->
    <!-- General -->
    <string name="app_name" translatable="false">SplashFlame</string>
    <string name="app_name_about">About SplashFlame</string>
    <string name="action_settings">Settings</string>

    <!-- Settings window -->
    <string name="settings_activity_title">Settings</string>
    <string name="settings_preference_screen_root" translatable="false">settings_preference_screen_root</string>

    <!-- Google account, sync, unprepared ... -->
    <string name="settings_category_data_transfer" translatable="false">settings_preference_category_data_transfer</string>
    <string name="settings_account_header">Account</string>
    <string name="settings_add_play_account_title">Google account</string>
    <string name="settings_add_play_account_summary">Sign in</string>
    <string name="settings_add_play_account_key" translatable="false">settings_add_play_account</string>
    <string name="settings_sign_out_play_account_title">Sign out</string>
    <string name="settings_sign_out_account_key" translatable="false">settings_sign_out_play_account</string>

    <string name="settings_data_transfer_header">Data Transfer</string>
    <string name="settings_sync_account_title">Enable data sync</string>
    <string name="settings_sync_account_summary">Sync data via Google Drive</string>
    <string name="settings_sync_account_key" translatable="false">settings_sync_account</string>

    <!-- Themes -->
    <string name="settings_theme_header">Decor</string>
    <string name="settings_change_theme_title">Theme color</string>
    <string name="settings_change_theme_key" translatable="false">settings_change_theme</string>
    <string name="settings_change_theme_dialog_title">Choose a theme color</string>

    <string name="settings_misc_header">Misc</string>
    <string name="settings_open_about_title">About</string>
    <string name="settings_open_about_key" translatable="false">settings_open_about</string>
    <string name="settings_feedback_title">Send feedback/suggestion</string>
    <string name="settings_feedback_summary">Provide a feedback about this app or make a suggestion about improvements</string>
    <string name="settings_feedback_key" translatable="false">settings_feedback</string>

    <string name="settings_ringtone_silent_summary">Silent</string>

    <!-- Nav drawer -->
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="drawer_user_data_name_greetings">&#9728; Greeting you! &#9728;</string>
    <string name="drawer_item_help_us">Help Us</string>

    <!-- Themes -->
    <string name="theme_name_default">Pink</string>
    <string name="theme_name_indigo">Indigo</string>
    <string name="theme_name_blue">Blue</string>
    <string name="theme_name_cyan">Cyan</string>
    <string name="theme_name_teal">Teal</string>
    <string name="theme_name_green">Green</string>
    <string name="theme_name_lgreen">Light Green</string>
    <string name="theme_name_purple">Purple</string>
    <string name="theme_name_brown">Brown</string>
    <string name="theme_name_orange">Orange</string>
    <string name="theme_name_dark">Dark</string>

    <!-- Toasts/Snackbars messages -->
    <string name="auth_flow_fetch_token_io_error">Network or server error. Check your connection and try again.</string>
    <string name="auth_flow_device_suitability">This device isn\'t supported for some reasons.</string>
    <string name="auth_flow_sign_in_twice">You are already authorized. Please sign out first.</string>
    <string name="auth_flow_no_network">No network connection available.</string>
    <string name="auth_flow_unknown_error">Unknown error, please repeat again.</string>
    <string name="auth_flow_rejected">The authorization was rejected.</string>
    <string name="auth_flow_pick_account">You must pick an account.</string>
    <string name="open_url_fallback_no_apps_to_open">You don\'t have apps to open links</string>

    <!-- Custom tab -->
    <string name="custom_tab_action_share">Share</string>
    <string name="custom_tab_action_email">Email</string>
    <string name="custom_tab_action_email_mail_title">Check this out</string>

    <string name="app_intro_slide_no_00_title">Intro</string>
    <string name="app_intro_slide_no_00_description">Intro description</string>

    <string name="feedback_suggestion_mail_start_body">Yo!\n\n</string>
    <string name="feedback_suggestion_email_title">Feedback/suggestion (%1$s)</string>

    <!-- ↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓ ↓↓↓↓↓↓↓↓ ↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓ -->
    <!-- ↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓ APP PART ↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓ -->
    <!-- ↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓ ↓↓↓↓↓↓↓↓ ↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓ -->
    <string name="section_flamer">Flamer</string>
    <string name="section_history">History</string>

    <string name="flame_activity_title">Flame</string>

    <string name="side_size_incorrect_format">Should be from %1$d to %2$d</string>
    <string name="flame_properties_first_dimension_hint">First dimension</string>
    <string name="flame_properties_second_dimension_hint">Second dimension</string>
    <string name="flame_properties_style_type_hint">Style type</string>

    <string-array name="popular_resolutions">
        <item>720 x 720</item>
        <item>960 x 640</item>
        <item>1024 x 768</item>
        <item>1136 x 640</item>
        <item>1280 x 720</item>
        <item>1280 x 768</item>
        <item>1280 x 800</item>
        <item>1280 x 1024</item>
        <item>1334 x 750</item>
        <item>1360 x 768</item>
        <item>1366 x 768</item>
        <item>1440 x 900</item>
        <item>1440 x 1440</item>
        <item>1600 x 900</item>
        <item>1600 x 1220</item>
        <item>1680 x 1050</item>
        <item>1920 x 1080</item>
        <item>1920 x 1200</item>
        <item>2048 x 1536</item>
        <item>2560 x 1440</item>
        <item>2560 x 1600</item>
    </string-array>

    <string-array name="flame_style_types">
        <item>Linear</item> <!-- 0 -->
        <!-- <item>Sinusoidal</item> --> <!-- 1 -->
        <item>Spherical</item> <!-- 2 -->
        <item>Swirl</item> <!-- 3 -->
        <item>Horseshoe</item> <!-- 4 -->
        <!-- <item>Polar</item> --> <!-- 5 -->
        <item>Handkerchief</item> <!-- 6 -->
        <item>Heart</item> <!-- 7 -->
        <item>Disk</item> <!-- 8 -->
        <item>Spiral</item> <!-- 9 -->
        <item>Hyperbolic</item> <!-- 10 -->
        <item>Diamond</item> <!-- 11 -->
        <item>Ex</item> <!-- 12 -->
        <item>Julia</item> <!-- 13 -->
        <!-- <item>Bent</item> --> <!-- 14 -->
        <item>Waves</item> <!-- 15 -->
        <item>Fisheye</item> <!-- 16 -->
        <item>Popcorn</item> <!-- 17 -->
        <item>Exponential</item> <!-- 18 -->
        <item>Power</item> <!-- 19 -->
        <!-- <item>Cosine</item> --> <!-- 20 -->
        <item>Rings</item> <!-- 21 -->
        <item>Fan</item> <!-- 22 -->
        <item>Eyefish</item> <!-- 23 -->
        <item>Bubble</item> <!-- 24 -->
        <!-- <item>Cylinder</item> --> <!-- 25 -->
        <item>Tangent</item> <!-- 26 -->
        <item>Cross</item> <!-- 27 -->
        <!-- <item>Collatz</item> --> <!-- 28 -->
        <item>Mobius</item> <!-- 29 -->
        <item>Blob</item> <!-- 30 -->
        <item>Noise</item> <!-- 31 -->
        <!-- <item>Blur</item> --> <!-- 32 -->
        <!-- <item>Square</item> --> <!-- 33 -->
        <item>Not Broken Waves</item> <!-- 34 -->
        <item>Smth</item> <!-- 35 -->
    </string-array>

    <string-array name="flame_style_types_tags">
        <item>0</item>
        <!-- <item>1</item> -->
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <!-- <item>5</item> -->
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <!-- <item>14</item> -->
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <!-- <item>20</item> -->
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <!-- <item>25</item> -->
        <item>26</item>
        <item>27</item>
        <!-- <item>28</item> -->
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <!-- <item>32</item> -->
        <!-- <item>33</item> -->
        <item>34</item>
        <item>35</item>
    </string-array>

</resources>
